--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "keycloak-connect": "^24.0.1",
+    "moment": "^2.30.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
