--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cryptr": "^6.2.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
