fix: docker-compose.yaml and nginx.conf

--- a/keycloak-ec2/docker-compose.yaml
+++ b/keycloak-ec2/docker-compose.yaml
@@ -29,14 +29,13 @@ services:
     environment:
       KC_DB: postgres
       KC_DB_URL_HOST: postgres
-      KC_DB_URL_DATABSE: $POSTGRES_USER
-      KC_DB_USERNAME: $POSTGRES_DB
+      KC_DB_USERNAME: $POSTGRES_USER
       KC_DB_PASSWORD: $POSTGRES_PASSWORD
       KC_HOSTNAME_URL: $KC_HOSTNAME_URL
       KC_HOSTNAME_STRICT_HTTPS: "true"
       KC_HOSTNAME_STRICT_BACKCHANNEL: "true"
       KC_PROXY: edge
-      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN: $KEYCLOAK_ADMIN
       KEYCLOAK_ADMIN_PASSWORD: $KEYCLOAK_ADMIN_PASSWORD
       KEYCLOAK_FRONTEND_URL: $KEYCLOAK_FRONTEND_URL
       # SMTP Configuration
