--- a/keycloak-ec2/nginx.conf
+++ b/keycloak-ec2/nginx.conf
@@ -19,10 +19,10 @@ http {
 
     server {
         listen 8025;
-        server_name keycloak-demo.chickenkiller.com;
+        server_name keycloak-demo01.duckdns.com;
     
 	    location / {
-            proxy_pass ht tp://mailhog:8025;
+            proxy_pass http://mailhog:8025;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,7 +32,7 @@ http {
 
     server {
         listen 9090;
-        server_name keycloak-demo.chickenkiller.com;
+        server_name keycloak-demo01.duckdns.com;
 
         location / {
             proxy_pass http://pgadmin4_container:9090;
@@ -45,10 +45,10 @@ http {
 
     server {
         listen 443 ssl;
-        server_name keycloak-demo.chickenkiller.com;
+        server_name keycloak-demo01.duckdns.com;
 
-        ssl_certificate "/etc/letsencrypt/live/keycloak-demo.chickenkiller.com/fullchain.pem";
-        ssl_certificate_key "/etc/letsencrypt/live/keycloak-demo.chickenkiller.com/privkey.pem";
+        ssl_certificate "/etc/letsencrypt/live/keycloak-demo.duckdns.com/fullchain.pem";
+        ssl_certificate_key "/etc/letsencrypt/live/keycloak-demo.duckdns.com/privkey.pem";
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
 
