--- a/keycloak-ec2/docker-compose.yaml
+++ b/keycloak-ec2/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:16.0
+    image: postgres:16.2
     container_name: postgres
     restart: always
     ports:
@@ -14,7 +14,7 @@ services:
       POSTGRES_PASSWORD: $POSTGRES_PASSWORD
       POSTGRES_DB: $POSTGRES_DB
   keycloak:
-    image: quay.io/keycloak/keycloak:24.0.5
+    image: quay.io/keycloak/keycloak:26.0.5
     container_name: keycloak
     restart: always
     ports:
@@ -27,27 +27,21 @@ services:
     networks:
       - keycloak-network
     environment:
-      KC_DB: postgres
-      KC_DB_URL_HOST: postgres
-      KC_DB_USERNAME: $POSTGRES_USER
-      KC_DB_PASSWORD: $POSTGRES_PASSWORD
       KC_HOSTNAME_URL: $KC_HOSTNAME_URL
       KC_HOSTNAME_STRICT_HTTPS: "true"
       KC_HOSTNAME_STRICT_BACKCHANNEL: "true"
       KC_PROXY: edge
       KEYCLOAK_ADMIN: $KEYCLOAK_ADMIN
       KEYCLOAK_ADMIN_PASSWORD: $KEYCLOAK_ADMIN_PASSWORD
-      KEYCLOAK_FRONTEND_URL: $KEYCLOAK_FRONTEND_URL
-      # SMTP Configuration
-      KC_MAIL_SMTP_SERVER: $SMTP_SERVER
-      KC_MAIL_SMTP_PORT: $SMTP_PORT
-      KC_MAIL_SMTP_FROM: $SMTP_FROM
-      KC_MAIL_SMTP_USER: $SMTP_USER
-      KC_MAIL_SMTP_PASSWORD: $SMTP_PASSWORD
-      KC_MAIL_SMTP_AUTH: true
-      KC_MAIL_SMTP_SSL: true
+      # KEYCLOAK_FRONTEND_URL: $KEYCLOAK_FRONTEND_URL
+      # Database Configuration
+      KC_DB: postgres
+      KC_DB_URL_HOST: postgres
+      KC_DB_USERNAME: $POSTGRES_USER
+      KC_DB_PASSWORD: $POSTGRES_PASSWORD
     volumes:
       - ./themes:/opt/keycloak/themes/
+      - ./providers:/opt/keycloak/providers/
   nginx:
     image: nginx:latest
     container_name: nginx
