config: update keycloak container env variables

--- a/keycloak-ec2/docker-compose.yaml
+++ b/keycloak-ec2/docker-compose.yaml
@@ -27,7 +27,8 @@ services:
       - keycloak-network
     environment:
       KC_HOSTNAME: $KC_HOSTNAME
-      KC_PROXY: edge
+      KC_HTTP_ENABLED: true
+      KC_PROXY_HEADERS: xforwarded
       KEYCLOAK_ADMIN: $KEYCLOAK_ADMIN
       KEYCLOAK_ADMIN_PASSWORD: $KEYCLOAK_ADMIN_PASSWORD
       # Database Configuration
